--- a/Tony Joseph/index.html
+++ b/Tony Joseph/index.html
@@ -1,1 +1,43 @@
+<html>
+    <head>
+        <title>Portfolio</title>
+        <style>
+            body{
+                background-image: url('432474.png') ;
+                
+            }
+            h1{
+                color:white;
+            }
+            p{
+                color:white;
+                font-size: 18px;
+            }
+            .container{
+                margin: 0;
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                margin-right: -50%;
+                transform: translate(-50%, -50%) ;
+                text-align: center;
+            }
+            button{
+                background-color: Transparent;
+                color:white;
+                padding:10px;
+                border:solid 1px white;
+                border-radius: 10px;
+                cursor: pointer;
+            }
+        </style>
+    </head>
+    <body class='b1'>
+        <div class="container">
+            <h1 id='hf'>Hi! Iam Tony</h1>
+            <p id='pf'>Lorem Ipsum is simply dummy text of the printing</p>
+            <a href="about me.html"><button>About Me &#8594</button></a>
 
+        </div>
+    </body>
+</html>
